--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@vonage/server-sdk": "^3.25.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -19,7 +20,6 @@
     "firebase": "^12.2.1",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
-    "socket.io": "^4.8.1",
-    "twilio": "^5.9.0"
+    "socket.io": "^4.8.1"
   }
 }
