--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
   "type": "commonjs",
   "dependencies": {
     "@vonage/server-sdk": "^3.25.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.2.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^13.0.0"
   }
 }
